# system-design-usecases

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
projects/google-drive/: .env.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
projects/google-drive/docs/: 00-analysis.md  01-architecture.md  02-learnings.md  03-changelog.md  google-drive-chat.txt
projects/google-drive/scripts/: demo.py
projects/google-drive/src/: api.py  config.py  models.py
projects/google-drive/src/services/: block_processor.py  cache_service.py  conflict_resolver.py  file_service.py  notification_service.py
projects/google-drive/src/storage/: database.py  init_db.py  s3_simulator.py  schema.py
projects/metrics-monitoring-alerting-system/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  requirements.txt
projects/metrics-monitoring-alerting-system/docs/: 00-analysis.md  01-architecture.md  02-learnings.md  03-changelog.md
projects/metrics-monitoring-alerting-system/metrics/: admin.py  models.py  serializers.py  urls.py  views.py
projects/payment-system/: .env.example  Makefile  README.md  docker-compose.yml  requirements.txt
projects/payment-system/docs/: 00-analysis.md  (+4 more)
projects/rate-limiter/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  rate-limiter-chat.txt  requirements.txt
projects/realtime-gaming-leaderboard/: .env  .env.example  Makefile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
shared/: base.py
toc/v1/: google-drive.md  rate-limiter.md
toc/v2/: leaderboard.md  metrics-monitoring-and-alerting-system.md  payment-system.md
(+58 files in other folders)
